[gd_scene load_steps=4 format=3 uid="uid://bqsh8lrdxmljt"]

[ext_resource type="Script" uid="uid://152oaj1p6c27" path="res://AutoLoad/GlobalUI.gd" id="1_6ujyj"]
[ext_resource type="Script" uid="uid://dlj44gyo6xh11" path="res://UI/UINavigationContainer.gd" id="2_vibvi"]
[ext_resource type="Script" uid="uid://cyqog03afsper" path="res://UI/Lists/TemporaryLabelList.gd" id="3_vibvi"]

[node name="GlobalUI" type="Node"]
process_mode = 3
script = ExtResource("1_6ujyj")

[node name="ForegroundOverlay" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 120

[node name="NavigationContainer" type="MarginContainer" parent="ForegroundOverlay"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("2_vibvi")

[node name="GlobalOverlayRect" type="ColorRect" parent="ForegroundOverlay"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.5, 0, 1, 0.5)

[node name="PauseOverlayContainer" type="MarginContainer" parent="ForegroundOverlay"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("2_vibvi")

[node name="LabelsList" type="VBoxContainer" parent="ForegroundOverlay"]
unique_name_in_owner = true
offset_left = 8.0
offset_top = 8.0
offset_right = 59.0
offset_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("3_vibvi")
